--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 .container {
     height: 100vh;
     width: 100%;
-    background: url("img3.jpg");
+    background: url("image1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
